# TechWhizKit

./: .gitignore  LICENSE  README.md
ADSman/: CMakeLists.txt  main.cpp  windows.mk
BackToIP/: CMakeLists.txt  main.cpp  windows.mk
HowFastIs/: CMakeLists.txt  main.cpp  windows.mk
LnkScout/: CMakeLists.txt  main.cpp  windows.mk
PulseNet/: main.py
SecurByte/: CMakeLists.txt  aes.c  aes.h  main.c  sha256.c  sha256.h  windows.mk
UnRecover/: CMakeLists.txt  Makefile  main.c
WiFiRe/: CMakeLists.txt  main.cpp  windows.mk
doc/: index.html  style.css
pidof/: CMakeLists.txt  main.cpp  windows.mk
